# divoom_client

./: .env.example  .gitignore  README.md  divoom@.service  pyproject.toml
config/: datasources.example.json  datasources.json  device.example.json  device.json  sample_data.json  sample_data_down.json
config/layouts/: Daily.json  Daily2.json  dashboard.json  demo.json  stocks.json  stocks_v2.json
src/divoom_client/: __init__.py  cli.py
src/divoom_client/core/: __init__.py  discovery.py  display_manager.py  fonts.py  frame.py  pixoo.py  renderer.py  scheduler.py
src/divoom_client/datasources/: __init__.py  base.py  generic.py  manager.py  stocks.py  weather.py
src/divoom_client/models/: __init__.py  config.py  layout.py
src/divoom_client/web/: __init__.py  app.py
tests/: __init__.py
